services/vector-search-rs/build_errors.txt
    Checking vector-search-rs v0.1.0 (/Users/zhuangzixian/Documents/LUTAGU_MVP/services/vector-search-rs)
warning: use of deprecated module `qdrant_client::prelude`: use types directly
 --> src/main.rs:1:20
  |
1 | use qdrant_client::prelude::*;
  |                    ^^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated struct `qdrant_client::client::QdrantClient`: use `qdrant_client::Qdrant` instead
  --> src/main.rs:23:22
   |
23 |     let mut config = QdrantClient::from_url(&qdrant_url);
   |                      ^^^^^^^^^^^^

warning: use of deprecated module `qdrant_client::prelude`: use types directly
 --> src/search.rs:1:20
  |
1 | use qdrant_client::prelude::*;
  |                    ^^^^^^^

warning: use of deprecated struct `qdrant_client::client::QdrantClient`: use `qdrant_client::Qdrant` instead
 --> src/search.rs:7:17
  |
7 |     qdrant: Arc<QdrantClient>,
  |                 ^^^^^^^^^^^^

warning: use of deprecated struct `qdrant_client::client::QdrantClient`: use `qdrant_client::Qdrant` instead
  --> src/search.rs:11:28
   |
11 |     pub fn new(qdrant: Arc<QdrantClient>) -> Self {
   |                            ^^^^^^^^^^^^

warning: use of deprecated module `qdrant_client::prelude`: use types directly
 --> src/http.rs:9:20
  |
9 | use qdrant_client::prelude::*;
  |                    ^^^^^^^

warning: use of deprecated struct `qdrant_client::client::QdrantClient`: use `qdrant_client::Qdrant` instead
  --> src/http.rs:17:21
   |
17 |     pub qdrant: Arc<QdrantClient>,
   |                     ^^^^^^^^^^^^

warning: use of deprecated struct `qdrant_client::client::QdrantClient`: use `qdrant_client::Qdrant` instead
   --> src/http.rs:174:34
    |
174 | pub fn create_router(qdrant: Arc<QdrantClient>) -> Router {
    |                                  ^^^^^^^^^^^^

warning: use of deprecated method `qdrant_client::client::points::<impl qdrant_client::client::QdrantClient>::search_points`: use new `qdrant_client::Qdrant::search_points` instead
  --> src/search.rs:35:14
   |
35 |             .search_points(search_builder.build())
   |              ^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src/search.rs:35:28
    |
 35 |             .search_points(search_builder.build())
    |              ------------- ^^^^^^^^^^^^^^^^^^^^^^ expected `&SearchPoints`, found `SearchPoints`
    |              |
    |              arguments to this method are incorrect
    |
note: method defined here
   --> /Users/zhuangzixian/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/qdrant-client-1.16.0/src/client/points.rs:686:18
    |
686 |     pub async fn search_points(&self, request: &SearchPoints) -> anyhow::Result<SearchResponse> {
    |                  ^^^^^^^^^^^^^
help: consider borrowing here
    |
 35 |             .search_points(&search_builder.build())
    |                            +

error[E0599]: `qdrant_client::qdrant::PointId` doesn't implement `std::fmt::Display`
  --> src/search.rs:42:45
   |
42 |                 let id = point.id.map(|i| i.to_string()).unwrap_or_default();
   |                                             ^^^^^^^^^ method cannot be called on `qdrant_client::qdrant::PointId` due to unsatisfied trait bounds
   |
  ::: /Users/zhuangzixian/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/qdrant-client-1.16.0/src/qdrant.rs:94:1
   |
94 | pub struct PointId {
   | ------------------ doesn't satisfy `qdrant_client::qdrant::PointId: ToString` or `qdrant_client::qdrant::PointId: std::fmt::Display`
   |
   = note: the following trait bounds were not satisfied:
           `qdrant_client::qdrant::PointId: std::fmt::Display`
           which is required by `qdrant_client::qdrant::PointId: ToString`

warning: use of deprecated method `qdrant_client::client::points::<impl qdrant_client::client::QdrantClient>::upsert_points`: use new `qdrant_client::Qdrant::upsert_points` instead
   --> src/search.rs:104:14
    |
104 |             .upsert_points(
    |              ^^^^^^^^^^^^^

warning: use of deprecated method `qdrant_client::client::points::<impl qdrant_client::client::QdrantClient>::search_points`: use new `qdrant_client::Qdrant::search_points` instead
  --> src/http.rs:64:10
   |
64 |         .search_points(
   |          ^^^^^^^^^^^^^

warning: use of deprecated method `qdrant_client::client::points::<impl qdrant_client::client::QdrantClient>::upsert_points`: use new `qdrant_client::Qdrant::upsert_points` instead
   --> src/http.rs:156:10
    |
156 |         .upsert_points(
    |          ^^^^^^^^^^^^^

warning: use of deprecated associated function `qdrant_client::client::QdrantClient::from_url`: use new `qdrant_client::Qdrant::from_url` instead
  --> src/main.rs:23:36
   |
23 |     let mut config = QdrantClient::from_url(&qdrant_url);
   |                                    ^^^^^^^^

warning: use of deprecated method `qdrant_client::client::QdrantClientConfig::with_api_key`: use `qdrant_client::config::QdrantConfig::api_key` instead
  --> src/main.rs:25:25
   |
25 |         config = config.with_api_key(key);
   |                         ^^^^^^^^^^^^

warning: use of deprecated method `qdrant_client::client::QdrantClientConfig::build`: use new config types at `qdrant_client::config` instead
  --> src/main.rs:27:25
   |
27 |     let client = config.build()?;
   |                         ^^^^^

warning: use of deprecated method `qdrant_client::client::collection::<impl qdrant_client::client::QdrantClient>::delete_collection`: use new `qdrant_client::Qdrant::delete_collection` instead
  --> src/main.rs:36:24
   |
36 |     let _ = client_arc.delete_collection(collection_name).await;
   |                        ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `qdrant_client::client::collection::<impl qdrant_client::client::QdrantClient>::create_collection`: use new `qdrant_client::Qdrant::create_collection` instead
  --> src/main.rs:42:26
   |
42 |     let res = client_arc.create_collection(&create_request).await;
   |                          ^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `vector-search-rs` (bin "vector-search-rs") generated 17 warnings
error: could not compile `vector-search-rs` (bin "vector-search-rs") due to 2 previous errors; 17 warnings emitted
